pegasus-backend/deploy/k8s-tabular-workers/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pegasus
  labels:
    app: pegasus-reconciliation
